--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "com.unity.2d.common": "9.0.5",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
+    "com.unity.2d.tilemap.extras": "4.0.2",
     "com.unity.collab-proxy": "2.3.1",
-    "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.rider": "3.0.28",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.localization": "1.4.5",
